one-line links in TOC

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_table_of_content.scss
@@ -22,7 +22,11 @@
   }
 
   & a {
+    display: block;
     line-height: 2.2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: var(--brand-secondary);
 
     &:hover {
