--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -4,18 +4,24 @@
         <!-- Content Side -->
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            <article class="article article_narrow article_bb mb-4">
-                <div class="article__cover mt-lg-5 mb-4">
-                    <picture>
-                        <source srcset="{{ .Params.preview_dir }}/title.webp" type="image/webp">
-                        <img alt="{{ .Title }}" src="{{ .Params.preview_dir }}/title.jpg">
-                    </picture>
+            <div class="row">
+                <div class="col-12 col-lg-10">
+                <article class="article article_narrow article_bb mb-4 ml-0 mr-0"> <!-- todo remove ml-0 mr-0 -->
+                    <div class="article__cover mt-lg-5 mb-4">
+                        <picture>
+                            <source srcset="{{ .Params.preview_dir }}/title.webp" type="image/webp">
+                            <img alt="{{ .Title }}" src="{{ .Params.preview_dir }}/title.jpg">
+                        </picture>
+                    </div>
+                    {{ partial "breadcrumbs" . }}
+                    <h1>{{ .Title }}</h1>
+                    {{ $wrappedTable := printf "<div class=table-responsive> ${1} </div>" }}
+                    {{ .Content | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
+                </article>
+
                 </div>
-                {{ partial "breadcrumbs" . }}
-                <h1>{{ .Title }}</h1>
-                {{ $wrappedTable := printf "<div class=table-responsive> ${1} </div>" }}
-                {{ .Content | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
-            </article>
+            {{- partial "table_of_content.html" . -}}
+            </div>
             <div class="pt-3">{{ partial "author" . }}</div>
             <div class="article__info mt-4">
                 <span class="d-inline-block mb-2 mb-md-0">
