--- a/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
@@ -5,6 +5,7 @@
     <div class="sticky-top">
         <h5 class="tableOfContent__header">Table of contents</h5>
         {{ .TableOfContents }}
+        {{ if eq $currentNode.Section "documentation" }}
         <div class="divider mb-1"></div>
         <ul class="tableOfContent__footer">
             <li>
@@ -18,6 +19,7 @@
                 </a>
             </li>
         </ul>
+        {{ end }}
         <br/>
     </div>
     {{ end }}
