--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,7 +1,7 @@
 {{$currentNode := .}}
 <div id="sidebar-mobile-header" class="col-12">
     <button id="sidebar-toggle" class="documentation__sidebar-toggle btn-style-four btn-style-four_responsive d-inline-block d-md-none">
-        <span class="text">List of Contents <i class="mt-1 ml-4"></i></span>
+        <span class="text">Docs Menu <i class="mt-1 ml-4"></i></span>
     </button>
 </div>
 <nav id="sidebar" class="documentation__sidebar-inner col-lg-2 col-md-3 col-12 pr-lg-4 mb-4 position-relative">
