--- a/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
@@ -42,7 +42,7 @@
 
     // Correct spacing of unordered list in table cells
     & table tr td ul {
-        margin: 0 !important;
+        margin: 0;
     }
   }
 
