new blog layout WIP

--- a/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
@@ -1,10 +1,31 @@
 {{- partial "header.html" . -}}
 
-{{- partial "second_header.html" . -}}
+<!--End Page Title-->
+<section class="page-title qdrant-blog">
+    <div class="auto-container">
+        <div class="row">
+            <div class="col-12{{ if .Params.img }} col-md-8{{ end }} order-1 order-md-0 pb-5">
+                {{ partial "breadcrumbs" . }}
+
+                <h1 class="page-title__title{{ if not .Params.section_title }} page-title__title_dark{{ end }}"> {{ .Params.title | safeHTML }}</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-6 col-6">
+                {{ .Scratch.Set "variant" "compact" }}
+                {{ partial "contact-section" . }}
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!--End Page Title-->
 
 <div id="content">
     {{ block "main" . }}{{ end }}
 </div>
 
+{{ .Scratch.Delete "variant" }}
 {{ partial "contact-section" . }}
 {{- partial "footer.html" . -}}
