--- a/qdrant-landing/themes/qdrant/layouts/blog/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/list.html
@@ -1,18 +1,112 @@
 {{ define "main" }}
+{{ $all := ($.Site.GetPage "blog" .Section).Pages.ByPublishDate.Reverse }}
 <section class="auto-container pt-3 pt-md-5">
+
+    <!-- Features and News -->
+    <div class="row">
+        <div class="col-12 col-md-5 d-flex justify-content-between">
+            <h1 class="qdrant-blog__subheader">Features and News</h1>
+        </div>
+
+        <div class="col-12 col-md-7">
+            <div class="qdrant-blog__search">
+                <input type="text" name="q" placeholder="What are you looking for?" class="qdrant-blog__search-input">
+                <button>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_1846_3020)">
+                            <path d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z" fill="#1F3266"/>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1846_3020">
+                                <rect width="16" height="16" fill="white"/>
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Featured Post -->
+    <div class="row clearfix qdrant-blog__featured">
+        {{ range where $all ".Params.featured" "=" true }}
+        {{ $link := .Permalink }}
+        {{ if .Params.external_link }}
+        {{ $link = .Params.external_link }}
+        {{ end }}
+        <div class="qb-card col-12 col-md-7">
+            <a href="{{ $link }}" class="qdrant-blog__card qb-card">
+                {{ if .Params.preview_image }}
+                <div class="qb-card__img">
+                    <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
+                </div>
+                {{ end }}
+                <h3 class="qb-card__title">{{ .Params.title }}</h3>
+                <p class="qb-card__text">{{ .Description }}</p>
+                <div class="qb-card__meta">
+                    <span>By {{ .Params.author }}</span>
+                    <span class="qb-card__meta-divider">·</span>
+                    <span>{{ .Date | time.Format ":date_long" }}</span>
+                </div>
+            </a>
+        </div>
+        {{ end }}
+        <!-- End of Featured Post -->
+        <!-- Latest Posts -->
+        <div class="col-12 col-md-5 d-flex flex-column justify-content-between">
+            {{ range first 3 $all }}
+            <div class="qb-card qb-card_border-bottom ml-3">
+                <h3 class="qb-card__title">
+                    <a href="{{ .Permalink }}">{{ .Params.title }}</a>
+                </h3>
+                <div class="qb-card__meta">
+                    <span>By {{ .Params.author }}</span>
+                    <span class="qb-card__meta-divider">·</span>
+                    <span>{{ .Date | time.Format ":date_long" }}</span>
+                </div>
+            </div>
+            {{ end }}
+        </div>
+        <!-- End of Latest Posts -->
+    </div>
+    <!-- End of Features and News -->
+
+    <!-- Blog Cards -->
     <div class="row clearfix">
 
         <!-- Sidebar Page Container -->
-        <div class="sidebar-page-container">
-            <div class="auto-container">
-                <div class="row clearfix">
+        {{ $paginator := .Paginate (where .Pages "Section" "blog") 9 }}
+        {{ range $paginator.Pages}}
+        {{ .Scratch.Set "scope" "list" }}
 
-                    <!-- Content Side -->
-                   {{ partial "sidebar-list" . }}
+        {{ $link := .Permalink }}
+        {{ if .Params.external_link }}
+        {{ $link = .Params.external_link }}
+        {{ end }}
 
-                </div>
+        <a href="{{ $link }}" class="qdrant-blog__card qb-card col-12 col-md-4">
+            {{ if .Params.preview_image }}
+            <div class="qb-card__img">
+                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
             </div>
-        </div>
+            {{ end }}
+            <h3 class="qb-card__title">{{ .Params.title }}</h3>
+            <p class="qb-card__text">{{ .Description }}</p>
+            <div class="qb-card__meta">
+                <span>By {{ .Params.author }}</span>
+                <span class="qb-card__meta-divider">·</span>
+                <span>{{ .Date | time.Format ":date_long" }}</span>
+            </div>
+        </a>
+
+
+        {{ end }}
+
+        {{ if gt $paginator.TotalPages 1}}
+        {{ partial "paginator" $paginator }}
+        {{ end }}
+
+
     </div>
 </section>
 {{ end }}
