--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -164,6 +164,7 @@ blockquote {
 @import "blocks/logo";
 @import "blocks/buttons";
 @import "blocks/copy-btn";
+@import "blocks/pagination";
 @import "blocks/hero-code";
 @import "blocks/features-section";
 @import "blocks/business-section-two";
