--- a/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
@@ -26,6 +26,7 @@
     {{ block "main" . }}{{ end }}
 </div>
 
-{{ .Scratch.Delete "variant" }}
+{{ .Scratch.Set "variant" "two-columns" }}
+
 {{ partial "contact-section" . }}
 {{- partial "footer.html" . -}}
