--- a/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
@@ -126,4 +126,92 @@ $blog-font-family: var.$blog-font-family;
     }
 
   }
+
+  &_two-columns {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+
+    background: var(--neutral-n-50, #F2F6FF);
+
+    @include media-breakpoint-up(md) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
+
+    &__title {
+      display: inline-block;
+      margin-bottom: 1.5rem;
+      color: var(--neutral-n-800, #102252);
+
+      /* H/H32 */
+      font-family: $blog-font-family;
+      font-size: 2rem;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 2.5rem; /* 125% */
+    }
+
+    &__subtitle {
+      display: inline-block;
+      margin-bottom: 2rem;
+
+      color: var(--neutral-n-700, #1F3266);
+      font-family: $blog-font-family;
+      font-size: 1rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 1.5rem; /* 150% */
+    }
+
+    &__form {
+      input[type="text"],
+      input[type="email"] {
+        width: 100%;
+        height: 3rem;
+        padding: 0.625rem 1.5rem;
+        padding-right: 4rem;
+        margin-bottom: 0.5rem;
+        border-radius: 6.25rem;
+        //border: 1px solid var(--neutral-n-200, #AEBDE5);
+
+        @include media-breakpoint-up(md) {
+          margin-right: 1.5rem;
+          margin-bottom: 5rem;
+        }
+
+        &::placeholder {
+          color: var(--neutral-n-300, #8B9CCC);
+
+          font-family: $blog-font-family;
+          font-size: 1rem;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 1.5rem; /* 150% */
+        }
+      }
+
+      button[type="submit"] {
+        width: 100%;
+        height: 3rem;
+        padding: 0 1.5rem;
+        border-radius: 6.25rem;
+        background: var(--brand-primary, #DC244C);
+        color: var(--neutral-white, #FFF);
+        margin-bottom: 1.5rem;
+
+        @include media-breakpoint-up(md) {
+          width: 9rem;
+        }
+
+        & > .text {
+          font-family: $blog-font-family;
+          font-size: 1rem;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 3rem; /* 150% */
+        }
+      }
+    }
+
+  }
 }
